--- a/package.json
+++ b/package.json
@@ -24,41 +24,20 @@
     "npm": "^8.x"
   },
   "dependencies": {
-    "@discordjs/builders": "^0.15.0",
-    "@discordjs/opus": "0.7.0",
-    "@discordjs/voice": "^0.10.0",
-    "@distube/soundcloud": "^1.1.0",
-    "@distube/spotify": "^1.2.1",
-    "@distube/yt-dlp": "1.0.2",
+    "@discordjs/rest": "^0.5.0",
     "ascii-table3": "^0.7.6",
     "chalk": "^4.1.2",
     "chartjs-node-canvas": "^4.1.6",
-    "cpu-stat": "^2.0.1",
-    "discord.js": "^13.8.0",
-    "distube": "^3.3.4",
-    "ejs": "^3.1.8",
-    "enmap": "^5.9.0",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "ffmpeg-static": "^5.0.0",
+    "discord.js": "^13.5.0",
     "glob": "^8.0.3",
-    "heroku-client": "^3.1.0",
-    "http": "^0.0.1-security",
-    "https-proxy-agent": "^5.0.1",
-    "libsodium-wrappers": "^0.7.10",
     "mathjs": "^10.6.1",
-    "memorystore": "^1.6.7",
     "moment": "^2.29.3",
     "moment-duration-format": "^2.3.2",
     "mongoose": "^6.3.8",
     "ms": "^2.1.3",
     "os": "^0.1.2",
     "os-utils": "^0.0.14",
-    "passport": "^0.6.0",
-    "passport-discord": "^0.1.4",
     "qrcode": "^1.5.0",
-    "session": "^0.1.0",
-    "url": "^0.11.0",
-    "weather-js": "^2.0.0"
+    "url": "^0.11.0"
   }
 }
