--- a/package.json
+++ b/package.json
@@ -24,17 +24,27 @@
     "npm": "^8.x"
   },
   "dependencies": {
+    "@discordjs/builders": "^0.15.0",
+    "@discordjs/opus": "0.7.0",
     "@discordjs/rest": "^0.5.0",
+    "@discordjs/voice": "^0.10.0",
+    "@distube/soundcloud": "^1.1.0",
+    "@distube/spotify": "^1.2.1",
+    "@distube/yt-dlp": "1.0.2",
     "ascii-table3": "^0.7.6",
-    "chalk": "^4.1.2",
+    "chalk": "4.1.2",
     "chartjs-node-canvas": "^4.1.6",
     "chartjs-plugin-gradient": "^0.5.0",
-    "discord.js": "^13.5.0",
+    "discord.js": "^13.8.0",
+    "distube": "3.3.4",
+    "enmap": "^5.9.0",
+    "ffmpeg-static": "^4.4.1",
     "glob": "^8.0.3",
+    "libsodium-wrappers": "^0.7.10",
     "mathjs": "^10.6.1",
     "moment": "^2.29.3",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^6.3.8",
+    "mongoose": "^6.4.0",
     "ms": "^2.1.3",
     "os": "^0.1.2",
     "os-utils": "^0.0.14",
