--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chartjs-plugin-gradient": "^0.5.0",
     "discord.js": "^13.8.1",
     "distube": "3.3.4",
+    "dotenv": "^16.0.1",
     "enmap": "^5.9.0",
     "ffmpeg-static": "^5.0.2",
     "glob": "^8.0.3",
