--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
     "enmap": "^5.9.0",
     "ffmpeg-static": "^5.0.2",
     "glob": "^8.0.3",
+    "heroku-client": "^3.1.0",
     "libsodium-wrappers": "^0.7.10",
     "mathjs": "^10.6.4",
     "moment": "^2.29.3",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^6.4.1",
+    "mongoose": "^6.4.2",
     "ms": "^2.1.3",
     "os": "^0.1.2",
     "os-utils": "^0.0.14",
