--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
   },
   "dependencies": {
     "@discordjs/builders": "^0.15.0",
-    "@discordjs/opus": "0.7.0",
+    "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^0.5.0",
     "@discordjs/voice": "^0.10.0",
     "@distube/soundcloud": "^1.1.0",
     "@distube/spotify": "^1.2.1",
-    "@distube/yt-dlp": "1.0.2",
+    "@distube/yt-dlp": "^1.0.2",
     "ascii-table3": "^0.7.6",
     "chalk": "4.1.2",
     "chartjs-node-canvas": "^4.1.6",
     "chartjs-plugin-gradient": "^0.5.0",
     "discord.js": "^13.8.1",
-    "distube": "3.3.4",
+    "distube": "^3.3.4",
     "dotenv": "^16.0.1",
     "enmap": "^5.9.0",
     "ffmpeg-static": "^5.0.2",
