--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
     "heroku-client": "^3.1.0",
     "libsodium-wrappers": "^0.7.10",
     "mathjs": "^10.6.4",
-    "moment": "^2.29.3",
+    "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^6.4.2",
+    "mongoose": "^6.4.4",
     "ms": "^2.1.3",
     "os": "^0.1.2",
     "os-utils": "^0.0.14",
-    "qrcode": "^1.5.0",
-    "url": "^0.11.0"
+    "qrcode": "^1.5.1",
+    "url": "^0.11.0",
+    "weather-js": "^2.0.0"
   }
 }
