--- a/package.json
+++ b/package.json
@@ -24,29 +24,28 @@
     "npm": "^8.x"
   },
   "dependencies": {
-    "@discordjs/builders": "^0.15.0",
     "@discordjs/opus": "^0.8.0",
-    "@discordjs/rest": "^0.5.0",
-    "@discordjs/voice": "^0.10.0",
-    "@distube/soundcloud": "^1.1.0",
-    "@distube/spotify": "^1.2.1",
-    "@distube/yt-dlp": "^1.0.2",
+    "@discordjs/rest": "^1.0.0",
+    "@discordjs/voice": "^0.11.0",
+    "@distube/soundcloud": "^1.2.1",
+    "@distube/spotify": "^1.3.2",
+    "@distube/yt-dlp": "^1.1.3",
     "ascii-table3": "^0.7.6",
     "chalk": "4.1.2",
     "chartjs-node-canvas": "^4.1.6",
     "chartjs-plugin-gradient": "^0.5.0",
-    "discord.js": "^13.8.1",
-    "distube": "^3.3.4",
+    "discord.js": "14.0.3",
+    "distube": "^4.0.2",
     "dotenv": "^16.0.1",
     "enmap": "^5.9.0",
     "ffmpeg-static": "^5.0.2",
     "glob": "^8.0.3",
     "heroku-client": "^3.1.0",
     "libsodium-wrappers": "^0.7.10",
-    "mathjs": "^10.6.4",
+    "mathjs": "^11.0.0",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^6.4.4",
+    "mongoose": "^6.4.6",
     "ms": "^2.1.3",
     "os": "^0.1.2",
     "os-utils": "^0.0.14",
