--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "@distube/soundcloud": "^1.2.1",
     "@distube/spotify": "^1.3.2",
     "@distube/yt-dlp": "^1.1.3",
+    "@distube/ytdl-core": "^4.11.4",
     "ascii-table3": "^0.7.6",
     "chalk": "4.1.2",
     "chartjs-node-canvas": "^4.1.6",
     "chartjs-plugin-gradient": "^0.5.0",
-    "discord.js": "14.1.2",
+    "discord.js": "14.2.0",
     "distube": "^4.0.3",
     "dotenv": "^16.0.1",
     "enmap": "^5.9.0",
@@ -45,7 +46,7 @@
     "mathjs": "^11.0.1",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^6.5.0",
+    "mongoose": "^6.5.2",
     "ms": "^2.1.3",
     "os": "^0.1.2",
     "os-utils": "^0.0.14",
