--- a/package.json
+++ b/package.json
@@ -20,28 +20,29 @@
   "homepage": "https://github.com/Jed556/Apollo#readme",
   "description": "A cool Javascript based Discord bot",
   "engines": {
-    "node": "^17.x",
+    "node": "^18.x",
     "npm": "^8.x"
   },
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
-    "@discordjs/rest": "^1.0.1",
+    "@discordjs/rest": "^1.1.0",
     "@discordjs/voice": "^0.11.0",
     "@distube/soundcloud": "^1.2.1",
     "@distube/spotify": "^1.3.2",
     "@distube/yt-dlp": "^1.1.3",
     "@distube/ytdl-core": "^4.11.4",
-    "ascii-table3": "^0.7.6",
+    "ascii-table3": "^0.7.7",
     "chalk": "4.1.2",
     "chartjs-node-canvas": "^4.1.6",
     "chartjs-plugin-gradient": "^0.5.0",
-    "discord.js": "14.2.0",
+    "discord.js": "14.3.0",
     "distube": "^4.0.3",
     "dotenv": "^16.0.1",
     "enmap": "^5.9.0",
     "ffmpeg-static": "^5.0.2",
     "glob": "^8.0.3",
     "heroku-client": "^3.1.0",
+    "iso-639-1": "^2.1.15",
     "libsodium-wrappers": "^0.7.10",
     "mathjs": "^11.0.1",
     "moment": "^2.29.4",
@@ -51,6 +52,7 @@
     "os": "^0.1.2",
     "os-utils": "^0.0.14",
     "qrcode": "^1.5.1",
+    "translate-google": "^1.5.0",
     "url": "^0.11.0",
     "weather-js": "^2.0.0"
   }
