--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/Jed556/Apollo#readme",
   "description": "A cool Javascript based Discord bot",
   "engines": {
-    "node": "^18.x",
+    "node": "^17.x",
     "npm": "^8.x"
   },
   "dependencies": {
@@ -35,6 +35,7 @@
     "chalk": "4.1.2",
     "chartjs-node-canvas": "^4.1.6",
     "chartjs-plugin-gradient": "^0.5.0",
+    "discord-html-transcripts": "^2.6.1",
     "discord.js": "14.3.0",
     "distube": "^4.0.3",
     "dotenv": "^16.0.1",
