--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "homepage": "https://github.com/Jed556/Apollo#readme",
   "description": "A cool Javascript based Discord bot",
   "engines": {
-    "node": "^17.x",
-    "npm": "^8.x"
+    "node": ">=17.x.x",
+    "npm": ">=8.x.x"
   },
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
@@ -34,21 +34,20 @@
     "ascii-table3": "^0.7.7",
     "chalk": "4.1.2",
     "chartjs-node-canvas": "^4.1.6",
-    "chartjs-plugin-gradient": "^0.5.0",
+    "chartjs-plugin-gradient": "^0.5.1",
     "discord-html-transcripts": "^2.6.1",
     "discord.js": "14.3.0",
     "distube": "^4.0.3",
     "dotenv": "^16.0.1",
-    "enmap": "^5.9.0",
-    "ffmpeg-static": "^5.0.2",
+    "enmap": "^5.9.1",
+    "ffmpeg-static": "^5.1.0",
     "glob": "^8.0.3",
-    "heroku-client": "^3.1.0",
     "iso-639-1": "^2.1.15",
     "libsodium-wrappers": "^0.7.10",
-    "mathjs": "^11.0.1",
+    "mathjs": "^11.1.0",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^6.5.2",
+    "mongoose": "^6.5.3",
     "ms": "^2.1.3",
     "os": "^0.1.2",
     "os-utils": "^0.0.14",
