--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.0.3",
     "enmap": "^5.9.2",
     "glob": "^8.0.3",
+    "images-scraper": "^6.4.1",
     "iso-639-1": "^2.1.15",
     "libsodium-wrappers": "^0.7.10",
     "mathjs": "^11.3.0",
