--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo",
-  "version": "3.6.15",
+  "version": "3.8.16",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -43,6 +43,7 @@
     "images-scraper": "^6.4.1",
     "iso-639-1": "^2.1.15",
     "libsodium-wrappers": "^0.7.10",
+    "mal-scraper": "2.11.4",
     "mathjs": "^11.3.2",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
