--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo",
-  "version": "3.9.17",
+  "version": "3.9.18",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,12 +25,12 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.13.0",
+    "@discordjs/voice": "0.13.0",
     "@distube/soundcloud": "^1.2.2",
     "@distube/spotify": "^1.4.2",
     "@distube/yt-dlp": "^1.1.3",
     "@distube/ytdl-core": "^4.11.5",
-    "ascii-table3": "^0.7.7",
+    "ascii-table3": "^0.7.8",
     "chalk": "4.1.2",
     "chartjs-node-canvas": "^4.1.6",
     "chartjs-plugin-gradient": "^0.5.1",
@@ -47,7 +47,7 @@
     "mathjs": "^11.3.2",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^6.7.0",
+    "mongoose": "^6.7.1",
     "ms": "^2.1.3",
     "os": "^0.1.2",
     "os-utils": "^0.0.14",
