--- a/__misc__/config/.env
+++ b/__misc__/config/.env
@@ -3,6 +3,10 @@ connectDB=true
 database=
 defaultCooldown=300
 guildID=
+listenerInteraction=false
+listenerDM=true,
+listenerGuild=false,
+listenerFriendly=false
 memoryShift=50
 musicRequestEditDelay=6000
 NODE_ENV=development
