--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo",
-  "version": "3.16.45",
+  "version": "4.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,29 +25,29 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "0.14.0",
+    "@discordjs/voice": "0.15.0",
     "@distube/soundcloud": "^1.3.0",
     "@distube/spotify": "^1.5.1",
     "@distube/yt-dlp": "^1.1.3",
     "@distube/ytdl-core": "^4.11.7",
-    "ascii-table3": "^0.8.0",
+    "ascii-table3": "^0.8.2",
     "chalk": "4.1.2",
     "chartjs-node-canvas": "^4.1.6",
     "chartjs-plugin-gradient": "^0.6.1",
     "discord-html-transcripts": "^3.1.2",
-    "discord.js": "14.7.1",
+    "discord.js": "14.8.0",
     "distube": "^4.0.4",
     "dotenv": "^16.0.3",
     "enmap": "^5.9.5",
-    "glob": "^9.1.0",
+    "glob": "9.3.2",
     "images-scraper": "^6.4.2",
     "iso-639-1": "^2.1.15",
-    "libsodium-wrappers": "^0.7.10",
+    "libsodium-wrappers": "^0.7.11",
     "mal-scraper": "2.12.0",
-    "mathjs": "^11.5.0",
+    "mathjs": "^11.7.0",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^7.0.0",
+    "mongoose": "^7.0.3",
     "ms": "^2.1.3",
     "os": "^0.1.2",
     "os-utils": "^0.0.14",
