--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo",
-  "version": "3.16.45",
+  "version": "3.16.46",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -39,7 +39,7 @@
     "distube": "^4.0.4",
     "dotenv": "^16.0.3",
     "enmap": "^5.9.5",
-    "glob": "^9.1.0",
+    "glob": "8.0.3",
     "images-scraper": "^6.4.2",
     "iso-639-1": "^2.1.15",
     "libsodium-wrappers": "^0.7.10",
