--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -57,4 +57,4 @@ jobs:
           username: ${{secrets.GCLOUD_USERNAME}}
           key: ${{secrets.GCLOUD_SSH}}
           script: |
-            ./apollo.sh -lscFGLr
+            ./Production/apollo.sh -nl
