--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -57,4 +57,5 @@ jobs:
           username: ${{secrets.GCLOUD_USERNAME}}
           key: ${{secrets.GCLOUD_SSH}}
           script: |
-            ./Production/apollo.sh -lscFGLr
+            cd Production
+            ./apollo.sh -lscFGLr
